--- a/index.html
+++ b/index.html
@@ -20,23 +20,75 @@
   <!-- Babel for in-browser JSX (OK for development / GitHub Pages demo) -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-  <style>
-    /* Glassmorphism + night theme */
-    :root{
-      --bg-1: #071020;
-      --bg-2: #0c2236;
-      --card-bg: rgba(255,255,255,0.06);
-      --card-border: rgba(255,255,255,0.08);
-      --glass-blur: 24px;
-      --accent: #7dd3fc;
-      --accent-2: #b794f4;
-      /* FIX: colore leggibile per le option nei menu a tendina */
-select option {
-  color: #000 !important;       /* testo nero */
-  background: #ffffff !important; /* sfondo bianco */
-}
+ <style>
+  /* Glassmorphism + night theme */
+  :root{
+    --bg-1: #071020;
+    --bg-2: #0c2236;
+    --card-bg: rgba(255,255,255,0.06);
+    --card-border: rgba(255,255,255,0.08);
+    --glass-blur: 24px;
+    --accent: #7dd3fc;
+    --accent-2: #b794f4;
+  }
 
-    }
+  /* FIX MENU A TENDINA — visibile su tutti i device */
+  select option {
+    color: #000 !important;
+    background: #fff !important;
+  }
+
+  body {
+    background: linear-gradient(180deg, var(--bg-1) 0%, var(--bg-2) 100%);
+    font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #E6F0FF;
+  }
+
+  .glass {
+    background: var(--card-bg);
+    border: 1px solid var(--card-border);
+    backdrop-filter: blur(var(--glass-blur));
+    -webkit-backdrop-filter: blur(var(--glass-blur));
+  }
+
+  .neon {
+    box-shadow: 0 6px 18px rgba(125,211,252,0.06),
+                0 0 18px rgba(125,211,252,0.04) inset;
+  }
+
+  .soft-glow {
+    transition: box-shadow .18s ease, transform .12s ease;
+  }
+  .soft-glow:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 8px 30px rgba(125,211,252,0.08);
+  }
+
+  .pill {
+    padding: 0.25rem 0.6rem;
+    border-radius: 999px;
+    font-weight: 600;
+    font-size: 0.78rem;
+    display: inline-flex;
+    align-items: center;
+    gap: 0.4rem;
+  }
+
+  input:focus, select:focus, textarea:focus {
+    outline: none;
+    box-shadow: 0 0 0 4px rgba(125,211,252,0.06);
+    border-color: rgba(125,211,252,0.24);
+  }
+
+  ::-webkit-scrollbar { height: 8px; width: 8px; }
+  ::-webkit-scrollbar-thumb {
+    background: rgba(255,255,255,0.06);
+    border-radius: 8px;
+  }
+</style>
+
 
     
 
